--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.5.4",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
